<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_cards"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/lvCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_bills"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/lvBills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_credits"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/lvCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>